--- a/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP.csproj
+++ b/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP.csproj
@@ -108,6 +108,7 @@
       <DependentUpon>TimerPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ReceitasViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
