--- a/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP.csproj
+++ b/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP.csproj
@@ -96,11 +96,16 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Converters\DecimalToStringPrecoConverter.cs" />
+    <Compile Include="Converters\TypeToObjectConverter.cs" />
+    <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\ConfiguracoesPage.xaml.cs">
       <DependentUpon>ConfiguracoesPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\EditarReceitaPage.xaml.cs">
+      <DependentUpon>EditarReceitaPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\ReceitasPage.xaml.cs">
       <DependentUpon>ReceitasPage.xaml</DependentUpon>
@@ -109,6 +114,11 @@
       <DependentUpon>TimerPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\Base\IRepository.cs" />
+    <Compile Include="Repository\MockReceitaRepository.cs" />
+    <Compile Include="Repository\Repository.cs" />
+    <Compile Include="Services\NavigationService.cs" />
+    <Compile Include="ViewModels\EditarReceitaViewModel.cs" />
     <Compile Include="ViewModels\ReceitasViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -137,6 +147,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Pages\ConfiguracoesPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\EditarReceitaPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
